--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "files": [
     "dist/"
   ],
-
   "scripts": {
     "dev": "vite",
     "build": "tsc -p tsconfig.build.json && vite build",
@@ -43,7 +42,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "rimraf": "^5.0.0",
     "tailwindcss": "^4.1.3",
-    "typescript": "~5.7.2",
+    "typescript": "^5.8.3",
     "vite": "^6.2.0",
     "vite-plugin-dts": "^3.5.3"
   },
