--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,17 @@
 {
-  "files": [],
-  "references": [
-    { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
-  ]
+  "compilerOptions": {
+    "baseUrl": "./",
+    "paths": {
+      "*": ["node_modules/*"],
+      "@components/*": ["src/components/*"],
+      "@hooks/*": ["src/hooks/*"]
+    },
+    "moduleResolution": "Node", 
+    "jsx": "react-jsx", 
+    "outDir": "./dist", 
+    "target": "ESNext", 
+    "module": "ESNext" 
+  },
+  "include": ["src/**/*"], 
+  "exclude": ["node_modules"] 
 }
