--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "build": "tsc -p tsconfig.build.json && vite build",
     "lint": "eslint . --ext .ts,.tsx",
     "preview": "vite preview",
-    "clean": "rimraf dist"
+    "clean": "rimraf dist",
+    "dev:watch": "tsc && vite build --watch"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.3",
