--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
   "name": "w3block-new-sdk",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "type": "module",
-  "main": "dist/index.js",
   "license": "Apache-2.0",
-  "types": "dist/index.d.ts",
-  "module": "dist/index.esm.js",
+  "main": "dist/w3block-sdk.cjs.js",
+  "files": [
+    "dist"
+  ],
+  "types": "./dist/w3block-ui-sdk.d.ts",
+  "module": "./dist/w3block-ui-sdk.js",
   "exports": {
     ".": {
-      "import": "./dist/index.esm.js",
-      "require": "./dist/index.js"
-    }
+      "import": "./dist/w3block-ui-sdk.js",
+      "require": "./dist/w3block-ui-sdk.umd.cjs"
+    },
+    "./dist/style.css": "./dist/style.css"
   },
-  "files": [
-    "dist/"
-  ],
   "scripts": {
     "dev": "vite",
     "build": "tsc -p tsconfig.build.json && vite build",
@@ -26,8 +27,8 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.3",
     "@tanstack/react-query": "^5.72.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": ">=19.0.0",
+    "react-dom": ">=19.0.0"
   },
   "peerDependencies": {
     "react": ">=19.0.0",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/node": "^22.14.1",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
