--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,15 +1,19 @@
 {
-  "extends": "./tsconfig.json",
   "compilerOptions": {
+    "moduleResolution": "node",
+    "module": "ESNext",
+    "jsx": "react-jsx",
     "outDir": "./dist",
+    "target": "ESNext",
     "declaration": true,
     "declarationMap": true,
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
     "sourceMap": true,
-    "jsx": "react-jsx",
-    "module": "ESNext",
-    "target": "ESNext",
-    "moduleResolution": "Node"
+    "baseUrl": "./",
+    "resolveJsonModule": true
   },
-  "include": ["src"],
-  "exclude": ["node_modules", "**/*.test.ts", "**/*.spec.ts"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
