--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
   "name": "w3block-new-sdk",
-  "version": "1.0.3",
-  "license": "Apache-2.0",
+  "version": "1.0.4",
   "type": "module",
-  "files": ["dist"],
-  "types": "./dist/index.d.ts",
-  "module": "./dist/w3block-new-sdk.es.js",
+  "files": [
+    "dist"
+  ],
+  "main": "dist/w3block-new-sdk.cjs.js",
+  "module": "dist/w3block-new-sdk.es.js",
+  "types": "dist/types/index.d.ts",
   "exports": {
     ".": {
       "import": "./dist/w3block-new-sdk.es.js",
-      "require": "./dist/w3block-new-sdk.umd.cjs"
+      "require": "./dist/w3block-new-sdk.cjs.js"
     },
-    "./dist/style.css": "./dist/style.css"
+    "./package.json": "./package.json"
   },
   "scripts": {
     "dev": "vite",
-    "build": "yarn clean && vite build",
+    "build": "yarn clean && tsc && vite build",
     "lint": "eslint . --ext .ts,.tsx",
     "preview": "vite preview",
     "clean": "rimraf dist",
@@ -25,7 +27,8 @@
     "@tailwindcss/vite": "^4.1.3",
     "@tanstack/react-query": "^5.72.2",
     "react": ">=19.0.0",
-    "react-dom": ">=19.0.0"
+    "react-dom": ">=19.0.0",
+    "vite-plugin-compression": "^0.5.1"
   },
   "peerDependencies": {
     "react": ">=19.0.0",
